refactor: use the new latest `getFirst()` instead of `get(0)`